Enhance the project slightly